[gd_scene load_steps=2 format=3 uid="uid://h3p7f2kgjoo7"]

[ext_resource type="Script" path="res://history.gd" id="1_ub0fh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ub0fh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -29.0
offset_top = -31.0
offset_right = 1183.0
offset_bottom = 675.0
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 14.0
offset_right = 272.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 50
text = "League History"

[node name="Label2" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 408.0
offset_top = 94.0
offset_right = 789.0
offset_bottom = 163.0
theme_override_font_sizes/font_size = 40
text = "Seasons: 50"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 408.0
offset_top = 164.0
offset_right = 790.0
offset_bottom = 233.0
theme_override_font_sizes/font_size = 40
text = "Playtime: 100:69"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 556.0
offset_right = 753.0
offset_bottom = 619.0
theme_override_font_sizes/font_size = 40
text = "Return to Game"

[node name="Tree" type="Tree" parent="."]
layout_mode = 0
offset_left = 278.0
offset_top = 226.0
offset_right = 907.0
offset_bottom = 539.0
columns = 3
column_titles_visible = true
hide_root = true
select_mode = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
